Address benchmark review feedback
Signed-off-by: Keshava Munegowda <keshava.gowda@gmail.com>